# pylib-maico

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: API.md
examples/: basic_usage.py
src/maico/: __init__.py  controller.py  dcam_wrapper.py  errors.py  fsm.py  guards.py  simulation.py  types.py
src/maico/core/: __init__.py  dcam_lib.py  enums.py  structs.py
tests/: test_controller_sim.py  test_fsm.py  test_guards.py
