[tool.poetry]
name = "pylib-maico"
version = "0.1.0"
description = "L2 Hardware Abstraction Layer for MAICO Laser Control System via Hamamatsu DCAM-API"
authors = ["JDW <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "maico", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
mypy = "^1.5.0"
ruff = "^0.0.286"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/maico --cov-report=term-missing"
